syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bok.bank.integration.grpc";
option java_outer_classname = "BankProto";

service Bank {

  rpc CreateAccount(AccountCreationRequest) returns (AccountCreationResponse);
  rpc Authorize(AuthorizationRequest) returns (AuthorizationResponse);
  rpc GetAccountInfo(AccountInfoRequest) returns (AccountInfoResponse);

}

message AccountInfoRequest{
  uint64 accountId = 1;
}
message AccountInfoResponse{
  string name = 1;
  string middleName = 2;
  string surname = 3;
  string email = 4;
}
message AccountCreationResponse {
  bool created = 1;
  string error = 2;
}

message AccountCreationRequest {
  uint64 accountId = 1;
  string email = 2;
}

message AuthorizationRequest{
  int64 accountId = 1;
  string extTransactionId = 2;
  Money money = 3;
  string fromMarket = 4;
}

message AuthorizationResponse{
  bool authorized = 1;
  string authorizationId = 2;
}

message Money{
  Currency currency = 1;
  double amount = 2;
}

enum Currency{
  USD = 0;
  EUR = 1;
  AUD = 2;
}